added the second blog

--- a/indesk.html
+++ b/indesk.html
@@ -7,5 +7,8 @@
 </head>
 <body><p>iam a student .now iam learning wed development</p>
     <link rel="stylesheet" href="style/blog.css">
+    <p>iam a learner.iam trying to learn web development .so i admit into a learning course which name is programming hero
+
+ </p>
 </body>
 </html>
