added the list tag in the website

--- a/indesk.html
+++ b/indesk.html
@@ -10,5 +10,15 @@
     <p>iam a learner.iam trying to learn web development .so i admit into a learning course which name is programming hero
 
  </p>
+ <div>
+    <ol>
+        <li>ami </li>
+        <li>tomi 
+        </li>
+        <li>she
+
+        </li>
+    </ol>
+ </div>
 </body>
 </html>
