added the picture

--- a/indesk.html
+++ b/indesk.html
@@ -20,5 +20,7 @@
         </li>
     </ol>
  </div>
+ <p>this picture is cuptured by me</p>
+ <img src="c:\Users\Hi\Desktop\nature picture\download.jpg" alt="nature">
 </body>
 </html>
